# smart-paes

./: .gitignore  404.html  CNAME  README.md  index.html  install.sh  pyproject.toml
.github/workflows/: deploy.yml
assets/: index-CakcbGm4.js  index-D3K9Xtyc.js  index-DKevWCcs.css  index-HyQBeeTU.css  index-R-7N0-Zq.js
assets/css/: base.css  ensayos.css
assets/js/: generateAnswersJSON.js  generateSheet.js
ensayos/: index.html
ensayos/saved/: index.html
notebooks/: get_info.ipynb  process_answers.ipynb
scraping/: get_info.ipynb
smartpaes/: __init__.py
smartpaes/scraping/: __init__.py  degree_scraper.py
src/scraping/: degree_scraper.py
website/: index.html  package-lock.json  package.json
website/src/: App.jsx  main.jsx
website/src/components/: EnsayosSheet.jsx  Footer.jsx  Nav.jsx  ThemeToggle.jsx
website/src/pages/: Ensayos.jsx  Home.jsx  Methodology.jsx  Saved.jsx  StartEnsayo.jsx
website/src/styles/: base.css  ensayos.css  footer.css  home.css  methodology.css  nav.css
website/src/utils/: answerUtils.js
