# pyproject.toml

[tool.poetry]
name = "SmartPAES"
version = "0.1.0"
description = "https://smartpaes.vicenteaguero.com/"
authors = ["Vicente Agüero <vicenteaguero@uc.cl>"]
packages = [
    { include = "smartpaes", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "*"
requests = "^2.32.3"
pandas = "^2.2.3"
pyarrow = "^19.0.0"
matplotlib = "^3.10.0"
numpy = "^2.2.2"
gspread = "^6.1.4"
oauth2client = "^4.1.3"
openpyxl = "^3.1.5"
beautifulsoup4 = "^4.13.3"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "^23.7.0"
isort = "^5.10.1"
pytest = "^8.3.4"
ipykernel = "^6.29.5"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
python_files = ["*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"